--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,37 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --menu-open-duration: 0.7s;
+  --body-container-height: 100%;
+
+  /* Color Vars */
+  --primary-background: #fff;
+  --secondary-background: #333;
+
+  --primary-text: #333;
+  --secondary-text: #fff;
+
+  --primary-text-rgb: 255, 255, 255;
+  --secondary-text-rgb: 51, 51, 51;
+
+  --background: var(--primary-background);
+  --text-color: var(--primary-text);
+  --text-color-rgb: var(--primary-text-rgb);
+
+  --alt-background: var(--secondary-background);
+  --alt-text-color: var(--secondary-text);
+  --alt-text-color-rgb: var(--secondary-text-rgb);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: var(--secondary-background);
+    --text-color: var(--secondary-text);
+    --text-color-rgb: var(--secondary-text-rgb);
+
+    --alt-background: var(--primary-background);
+    --alt-text-color: var(--primary-text);
+    --alt-text-color-rgb: var(--primary-text-rgb);
   }
 }
 
@@ -18,4 +41,20 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.h1 {
+  font-size: 1.8rem;
+}
+
+.h2 {
+  font-size: 1.6rem;
+}
+
+.h3 {
+
+}
+
+.h4 {
+
 }
