--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,17 +44,21 @@ body {
 }
 
 .h1 {
+  color: var(--text-color);
   font-size: 1.8rem;
 }
 
 .h2 {
+  color: var(--text-color);
   font-size: 1.6rem;
 }
 
 .h3 {
-
+  color: var(--text-color);
+  font-size: 1.4rem;
 }
 
 .h4 {
-
+  color: var(--text-color);
+  font-size: 1.2rem;
 }
