changes structure of how each section is displayed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,8 @@ body {
   color: var(--text-color);
   font-size: 1.2rem;
 }
+
+.home-page-body-container {
+  height: 86vh;
+  overflow: scroll;
+}
