--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -37,6 +37,7 @@
 
 .toggle-menu-label-chevron {
   transform: rotateX(0deg);
+  transform-style: preserve-3d;
   transition: transform var(--menu-open-duration);
 }
 
