--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,25 +43,32 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.h1 {
+h1, h2, h3, h4, p {
   color: var(--text-color);
+}
+
+h1 {
   font-size: 1.8rem;
 }
 
-.h2 {
-  color: var(--text-color);
+h2 {
   font-size: 1.6rem;
 }
 
-.h3 {
-  color: var(--text-color);
+h3 {
   font-size: 1.4rem;
 }
 
-.h4 {
-  color: var(--text-color);
+h4 {
+  font-weight: bold;
   font-size: 1.2rem;
 }
+
+p {
+  font-size: 1.2rem;
+}
+
+
 
 .home-page-body-container {
   height: 86vh;
