--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,24 +47,29 @@ h1, h2, h3, h4, p {
   color: var(--text-color);
 }
 
-h1 {
+h1,
+.h1 {
   font-size: 1.8rem;
 }
 
-h2 {
+h2,
+.h2 {
   font-size: 1.6rem;
 }
 
-h3 {
+h3,
+.h3 {
   font-size: 1.4rem;
 }
 
-h4 {
+h4,
+.h4 {
   font-weight: bold;
   font-size: 1.2rem;
 }
 
-p {
+p,
+.p {
   font-size: 1.2rem;
 }
 
